Add: daily list viewmodel.

--- a/app/src/main/res/layout/activity_daily_list.xml
+++ b/app/src/main/res/layout/activity_daily_list.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="ca.six.daily.biz.home.DailyListActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewmodel"
+            type="ca.six.daily.biz.home.viewmodel.DailyListViewModel"/>
+    </data>
 
-    <android.support.v7.widget.RecyclerView android:id="@+id/rvDailyList"
-        android:layout_width="match_parent" android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="ca.six.daily.biz.home.DailyListActivity">
 
-</RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvDailyList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:items="@{viewmodel.items}" />
+
+    </RelativeLayout>
+</layout>
+
