--- a/app/src/main/res/layout/item_daily_list.xml
+++ b/app/src/main/res/layout/item_daily_list.xml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="95dp" android:background="#fff" >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView android:id="@+id/ivListItemTitle" android:layout_width="95dp" android:layout_height="95dp"
-        android:layout_gravity="center_vertical" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
-        />
+    <data>
+        <variable
+            name="viewmodel"
+            type="ca.six.daily.biz.home.viewmodel.ListItemViewModel"/>
+    </data>
 
-    <TextView android:id="@+id/tvListItemTitle" android:layout_width="match_parent" android:layout_height="match_parent"
-        android:textColor="#000" android:textSize="18dp"
-        android:gravity="center_vertical" android:layout_marginRight="20dp"
-        tools:text="Sep 23th, 2017"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="95dp"
+        android:background="#fff"
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/ivListItemTitle"
+            android:layout_width="95dp"
+            android:layout_height="95dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:src="@{viewmodel.story.images[0]}"/>
+
+        <TextView
+            android:id="@+id/tvListItemTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
+            android:gravity="center_vertical"
+            android:textColor="#000"
+            android:textSize="18dp"
+            android:text="@{viewmodel.story.title}"
+            tools:text="Sep 23th, 2017" />
+
+    </LinearLayout>
+
+</layout>
