--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView android:id="@+id/tvTitleItem" android:layout_width="match_parent" android:layout_height="40dp"
-        android:background="#ccc" android:textColor="#000" android:textSize="18dp"
-        android:gravity="center_vertical" android:paddingLeft="@dimen/margin_left" tools:text="Sep 23th, 2017"/>
+    <data>
 
-</LinearLayout>
+        <variable
+            name="viewmodel"
+            type="ca.six.daily.biz.home.viewmodel.ListTitleViewModel" />
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvTitleItem"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#ccc"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/margin_left"
+            android:text="@{viewmodel.title}"
+            android:textColor="#000"
+            android:textSize="18dp"
+            tools:text="Sep 23th, 2017" />
+
+    </LinearLayout>
+
+</layout>
