--- a/app/src/main/res/layout/item_daily_list.xml
+++ b/app/src/main/res/layout/item_daily_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -20,8 +21,7 @@
             android:layout_height="95dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:src="@{viewmodel.story.images[0]}"/>
+            android:layout_marginRight="20dp"/>
 
         <TextView
             android:id="@+id/tvListItemTitle"
