--- a/app/src/main/res/layout/item_daily_list.xml
+++ b/app/src/main/res/layout/item_daily_list.xml
@@ -21,7 +21,8 @@
             android:layout_height="95dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            app:imageUrl="@{viewmodel.story.images[0]}"/>
 
         <TextView
             android:id="@+id/tvListItemTitle"
