--- a/app/src/main/res/layout/item_daily_details.xml
+++ b/app/src/main/res/layout/item_daily_details.xml
@@ -44,7 +44,9 @@
         <WebView
             android:id="@+id/wvContent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:body="@{viewmodel.body}"
+            app:cssVer="@{viewmodel.cssVer}"/>
     </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
